@@ -11,13 +11,13 @@
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <failsafe.plugin.version>3.1.2</failsafe.plugin.version>
-        <jacoco.plugin.version>0.8.10</jacoco.plugin.version>
+        <failsafe.plugin.version>3.5.4</failsafe.plugin.version>
+        <jacoco.plugin.version>0.8.14</jacoco.plugin.version>
         <restassured.version>5.5.6</restassured.version>
         <cucumber.version>7.30.0</cucumber.version>
         <testng.version>7.8.0</testng.version>
-        <allure.version>2.29.1</allure.version>
-        <allure.maven.plugin.version>2.11.2</allure.maven.plugin.version>
+        <allure.version>2.30.0</allure.version>
+        <allure.maven.plugin.version>2.16.0</allure.maven.plugin.version>
         <logging.version>2.20.0</logging.version>
         <logging.api.version>2.0.9</logging.api.version>
         <logging.core.version>1.2.17</logging.core.version>
@@ -53,12 +53,10 @@
               <configuration>
                 <!-- Where Allure will store raw result files (from your tests) -->
                 <resultsDirectory>${project.basedir}/reports</resultsDirectory>
-
                 <!-- Where the final HTML report will be generated -->
                 <reportDirectory>${project.basedir}/reports/site</reportDirectory>
                   <serveHost>127.0.0.1</serveHost>
               </configuration>
-
               <executions>
                 <!-- Automatically generate report during 'verify' phase -->
                 <execution>
@@ -92,7 +90,7 @@
               </execution>
               <execution>
                 <id>report</id>
-                <phase>verify</phase>
+                <phase>post-integration-test</phase>
                 <goals>
                   <goal>report</goal>
                 </goals>
@@ -114,7 +112,7 @@
             </executions>
             <configuration>
               <includes>
-                <include>**/TestRunner*.java</include>
+                <include>**/*IT.java</include>
               </includes>
               <systemPropertyVariables>
                 <env>${env}</env>
@@ -122,22 +120,7 @@
               </systemPropertyVariables>
             </configuration>
           </plugin>
-            <!--plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${surefire.plugin.version}</version>
-                <configuration>
-                    <argLine>-Djava.security.manager=allow</argLine>
-                    <includes>
-                        <include>**/TestRunner.class</include>
-                    </includes>
-                    <systemPropertyVariables>
-                        <env>${env}</env>
-                      <allure.results.directory>${project.basedir}/reports</allure.results.directory>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin-->
-            <plugin>
+          <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
